--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -4,14 +4,13 @@
     </div>
     <div class="col-md-9">
         <h1 class="display-4">Welcome, Vinay!</h1>
-        
+
         <div [ngSwitch]="isAuthenticated()">
             <div class="alert alert-success" *ngSwitchCase="true">
                 <span *ngIf="account"
                    > You are logged in as "{{account.login}}". </span>
             </div>
+        </div>
 
-
-        
     </div>
 </div>
